# nya_downloader

./: .gitignore  pyproject.toml
src/: nya_downloader.py
